--- a/space.html
+++ b/space.html
@@ -84,7 +84,7 @@ canvas{
 		*/
 	</script>
 
-	<script async type="text/javascript" src="space-shoot.js"></script>
+	<script async type="text/javascript" src="space.js"></script>
 	  
 	<script>
 		// key blocker. prevent cursor keys from scrolling page while playing cart.
